--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
     <string name="app_name">ExamenEventosApp2</string>
+    <string name="event_screen">Events</string>
+    <string name="invalid_price">Incorrect input, try again</string>
+    <string name="close_event">Close</string>
+    <string name="empty_event">Add a new Event</string>
+    <string name="add_event">Add Event</string>
+    <string name="event_name">Event Name</string>
+    <string name="event_description">Event Description</string>
+    <string name="event_price">Event Price</string>
+    <string name="event_address">Event Address</string>
+    <string name="save_event">Save Event</string>
+    <string name="select_language">Select Language</string>
+    <string name="save">Save</string>
+    <string name="settings">Settings</string>
+    <string name="spanish">Spanish</string>
+    <string name="english">English</string>
 </resources>
